chore: fix tar audit vulnerability

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -66,8 +66,7 @@ overrides:
   node-forge@<1.3.2: '>=1.3.2'
   semver@<5.7.2: '>=5.7.2'
   serialize-javascript@>=6.0.0 <6.0.2: 6.0.2
-  tar@<=7.5.2: '7.5.3'
-  tar@=7.5.1: '7.5.2'
+  tar@<=7.5.3: 7.5.4
   tmp@<=0.2.3: 0.2.4
   undici@<6.23.0: 6.23.0
   undici@>=7.0.0 <7.18.2: 7.18.2
